# omniflow

./: .gitignore  .omniflow.example.yml  README.md  action.yml  pyproject.toml  setup.cfg
.github/workflow-examples/: omniflow.yml
.github/workflows/: dependency-scan.yml  release.yml  sast.yml  secret-scan.yml
.omni/: flow.example.json
src/omniflow/: cli.py  config.py  contracts.py  discovery.py  downstream.py  evidence.py  exceptions.py  git.py  logging.py  omni_client.py  security.py  yaml_pull.py
src/omniflow/diff/: diff_engine.py  semantic_graph.py  yaml_loader.py
src/omniflow/github/: annotations.py  pr_comment.py
src/omniflow/reporting/: json_report.py  junit_report.py  markdown_report.py  sarif_report.py  writer.py
src/omniflow/validators/: content.py  model.py  yaml_lint.py
tests/: test_config_security.py  test_content_model.py  test_diff_lint_reports.py  test_discovery_contracts.py  test_omni_client.py
