[metadata]
name = omniflow
version = 0.4.0
description = Security-first CI/CD orchestrator for Omni semantic-layer development
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ATX Omni

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML>=6.0
    requests>=2.31.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    omniflow = omniflow.cli:main
